--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "selfbot",
     "discord",
     "olejka",
-    "djs",
-    "djs11"
+    "djs"
   ],
   "author": "Olejka",
   "license": "MIT",
@@ -26,7 +25,7 @@
   "homepage": "https://github.com/TheSainEyereg/Discord-selfbot#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "discord.js-selfbot-v13": "^2.3.74",
+    "discord.js-selfbot-v13": "^2.4.7",
     "form-data": "^4.0.0"
   }
 }
